# minichat-django

./: .dockerignore  .env.sample  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
core/: asgi.py  urls.py
core/chat/: admin.py  apps.py  consumers.py  forms.py  models.py  permissions.py  routing.py  schemas.py  urls.py  utils.py  views.py
core/chat/migrations/: 0001_create_base_private_message_models.py  0001_create_chat_main_models.py  0002_add_sender_field_to_base_message.py  0002_create_private_chat_model.py  0003_convert_participants_to_many_2_many_field.py  0003_make_type_editable_for_chat_model.py  0004_change_related_name_in_base_private_message.py  0004_make_id_not_editable_for_id_fields.py  0005_fix_uuid_default_value.py
core/pages/: apps.py  urls.py  views.py
core/settings/: __init__.py
core/static/css/: main.css
core/templates/: base.html  navbar.html
core/templates/chat/: conversation.html  home.html  list.html  room.html
core/templates/chat/partial/: aside.html  chat-box.html  chat-list-item.html  list-item.html  list.html  text-message-bubble.html
core/templates/pages/: index.html
core/templates/registration/: login.html  signup.html
core/users/: admin.py  apps.py  backends.py  forms.py  managers.py  models.py  urls.py  views.py
core/users/migrations/: 0001_create_user_model.py
core/utils/: models.py
